--- a/NOVA/Views/Home/Index.cshtml
+++ b/NOVA/Views/Home/Index.cshtml
@@ -17,9 +17,7 @@
 
 
 
-    <script src="~/Scripts/jquery-3.6.1.js"></script>
-    <script src="~/Scripts/tippy/popper.min.js"></script>
-    <script src="~/Scripts/tippy/tippy-bundle.umd.js"></script>
+   
     <style>
         .centercontent {
             position: absolute;
@@ -31,10 +29,9 @@
             z-index: 5;
         }
     </style>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="stylesheet" href="https://lipis.github.io/bootstrap-sweetalert/lib/sweet-alert.css">
-    <link href="~/assets/css/mutluyillar.css" rel="stylesheet" />
-    <script src="~/assets/js/mutluyillar.js"></script>
+    
+    
+  
 </head>
 
 <body onload="script();" onclose="close()">
@@ -398,11 +395,11 @@
 
     <script>
         var userData = [];
-        $(document).ready(function () {   //same as: $(function() {
+        $(document).ready(function () {   
             document.body.style.cursor = 'wait';
         });
 
-        userData.push({ USERID: "@Request.Cookies["UserId"].Value", USERNAME: "@Request.Cookies["UserName"].Value", PLATFORM: @Request.Cookies["Platform"].Value , LASTACTIVETIME: "@DateTime.Now.ToString()" });
+        userData.push({ USERID: "@Request.Cookies["UserId"].Value", USERNAME: "@Request.Cookies["UserName"].Value", PLATFORM: "@Request.Cookies["Platform"].Value" , LASTACTIVETIME: "@DateTime.Now.ToString()" });
 
        localStorage.userlist = JSON.stringify(userData[0]);
 
