--- a/NOVA/Views/Shared/_Layout_anasayfa.cshtml
+++ b/NOVA/Views/Shared/_Layout_anasayfa.cshtml
@@ -26,32 +26,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
           rel="stylesheet" type="text/css" />
 
-    <!-- Icons. Uncomment required icon fonts -->
+   
 
-    <link href="\assets\boxicons-2.1.2\css\boxicons.css" rel="stylesheet" type="text/css" />
-    <link href="\assets\boxicons-2.1.2\css\animations.css" rel="stylesheet" type="text/css" />
-    <link href="\assets\boxicons-2.1.2\css\transformations.css" rel="stylesheet" type="text/css" />
-
-    <!-- Core CSS -->
-    <link rel="stylesheet" type="text/css" href="\assets\vendor\css\core.css" class="template-customizer-core-css" />
-    <link rel="stylesheet" type="text/css" href="\assets\vendor\css\theme-default.css" class="template-customizer-theme-css" />
-    <link rel="stylesheet" type="text/css" href="\assets\css\demo.css" />
-
-    <!-- Vendors CSS -->
-    <link rel="stylesheet" type="text/css" href="\assets\vendor\libs\perfect-scrollbar\perfect-scrollbar.css" />
-
-    <link rel="stylesheet" type="text/css" href="\assets\vendor\libs/apex-charts/apex-charts.css" />
-
-    <!-- Page CSS -->
-    <!-- Helpers -->
-    <script type="text/javascript" src="\assets\vendor\js\helpers.js"></script>
-
-    <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
-    <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
-    <script type="text/javascript" src="\assets\js\config.js"></script>
-    <script src="/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="/Scripts/jquery.validate.js" type='text/javascript'></script>
-    <script src="/Scripts/jquery.validate.unobtrusive.js" type='text/javascript'></script>
+    @Styles.Render("~/Content/test")
+    @Scripts.Render("~/bundles/config")
+    
+    
     <style>
         .btn-grad {
             background-image: linear-gradient(to right, #77A1D3 0%, #79CBCA 51%, #77A1D3 100%);
@@ -146,6 +126,11 @@
                             <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayMusteriOzel">
                                 <a href="@Url.Action("MusteriRaporuOzel", "Satis")" class="menu-link">
                                     <div data-i18n="Without menu">Kayıtlı Müşteriler</div>
+                                </a>
+                            </li>
+                            <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayMusteriRaporu">
+                                <a href="@Url.Action("ZiyaretPlanlari", "Satis")" class="menu-link">
+                                    <div data-i18n="Without menu">Ziyaret Planları</div>
                                 </a>
                             </li>
                         </ul>
@@ -473,32 +458,13 @@
 
 
 
-    <!-- Core JS -->
-    <!-- build:js assets/vendor/js/core.js -->
-    <script type="text/javascript" src="/assets/vendor/libs/jquery/jquery.js"></script>
-    <script type="text/javascript" src="/assets/vendor/libs/popper/popper.js"></script>
-    <script type="text/javascript" src="/assets/vendor/js/bootstrap.js"></script>
-    <script type="text/javascript" src="/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+    
+  @Scripts.Render("~/bundles/bootstrap")
 
-    <script type="text/javascript" src="/assets/vendor/js/menu.js"></script>
-    <!-- endbuild -->
-    <!-- Vendors JS -->
-    <script type="text/javascript" src="/assets/vendor/libs/apex-charts/apexcharts.js"></script>
+  
 
-    <!-- Main JS -->
-    <script type="text/javascript" src="/assets/js/main.js"></script>
-
-    <!-- Page JS -->
-    <script type="text/javascript" src="/assets/js/dashboards-analytics.js"></script>
-
-    <!-- Place this tag in your head or just before your close body tag. -->
-
-
-    <script type="text/javascript" async defer src="/Scripts/buttons.js"></script>
-    <script type="text/javascript" src="/Scripts/boxicons.js"></script>
-    <script>
-        window.history.forward(1);
-    </script>
+   
+   
     
 
 
