--- a/NOVA/Views/Shared/_Layout_musteri_raporu_ozel.cshtml
+++ b/NOVA/Views/Shared/_Layout_musteri_raporu_ozel.cshtml
@@ -119,6 +119,11 @@
                                         <div data-i18n="Without menu">Kayıtlı Müşteriler</div>
                                     </a>
                                 </li>
+                                <li class="menu-item" style="font-weight:normal;display: @ViewBag.DisplayMusteriRaporu">
+                                    <a href="@Url.Action("ZiyaretPlanlari", "Satis")" class="menu-link">
+                                        <div data-i18n="Without menu">Ziyaret Planları</div>
+                                    </a>
+                                </li>
                             </ul>
                         </li>
                         <li class="menu-item" style="display: @ViewBag.DisplaySevkiyat">
